# patches

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  docker_dummy.rs  reportapi.go
clair_config/: config.yaml
cmd/scanner/: reporting.go  scanner.go  scanner_test.go
cmd/server/: server.go
docs/: features.md
internal/clients/: clients.go  clients_test.go
internal/limit/: limit.go  limit_test.go
internal/scanners/: scanners.go  scanners_test.go
internal/scanners/clair/: clair.go  clair_test.go
internal/scanners/dpkg/: dpkg.go  dpkg_test.go
internal/scanners/homebrew/: homebrew.go
internal/scanners/rpm/: rpm.go
internal/servers/: jobs.go  jobs_test.go  servers.go  servers_test.go
internal/sources/clair/: clair.go  clair_test.go
pkg/done/: done.go
pkg/pack/: pack.go  versions.go
pkg/platform/: platform.go
pkg/vulnerability/: vulnerability.go
src/: .main.rs.swp  main.rs  never.rs
src/package/: .mod.rs.swp  macos.rs  mod.rs  package.rs
src/vulnerability/: mod.rs  vulnerability.rs
src/vulnerability/clair/: api.rs  mod.rs
