[package]
name = "patches"
version = "0.1.0"
authors = ["Zack Mullaly <zmullaly@mozilla.com>"]

# This target is included to be built in Docker.
# Doing so before building the actual application enables us to have Docker
# cache our compiled dependencies and only change them when we add more.
[lib]
name = "dummy"
path = "docker_dummy.rs"

[features]
integration-test = []  # Only set when integration testing in Docker

[dependencies]
clap = "^2.32"
reqwest = "^0.9"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
